<resources>
    <string name="app_name">StoreLocator</string>
    <string name="lbl_email">Enter Email</string>
    <string name="lbl_password">Enter Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="add_store">Add Store</string>
    <string name="add_store_name">Add Store Name</string>
    <string name="reset_list">Reset</string>
    <string name="title_activity_store">StoreActivity</string>


    <string name="action_settings">Logout</string>


</resources>
