<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.StoreListActivity">


    <EditText
        android:id="@+id/txt_add_store_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:hint="@string/add_store_name"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/store_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_add_store"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/add_store"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/btn_reset_list"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/reset_list"
            android:textSize="18dp"
            android:clickable="true"
            />
    </LinearLayout>


</LinearLayout>

